# TopoHYFA

./: .gitignore  README.md  benchmark_original.py  benchmark_teebot.py  eval_15.py  evaluate_GTEx_v8_normalised.ipynb  evaluate_GTEx_v8_normalised.py  evaluate_GTEx_v9_signatures_normalised.ipynb  hyfa_tutorial.ipynb  infer.py  patch_evaluate.py  patch_evaluate_2.py  prep_handoff.py  probe.py  pyproject.toml  run_disease_prediction.py  train_gtex.py
Imputation/code/: extract_target_genes_pytd.R
configs/: default.yaml
src/: baselines.py  ct_signature_utils.py  data.py  data_utils.py  dataset.py  distributions.py  eval_utils.py  hnn.py  hnn_utils.py  hypergraph_layer.py  losses.py  metagene_decoders.py  metagene_encoders.py  pathway_utils.py  plot_utils.py  train_utils.py
